--- a/manual.po
+++ b/manual.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-27 18:37+0200\n"
-"PO-Revision-Date: 2010-11-01 17:32+0300\n"
+"PO-Revision-Date: 2010-11-04 01:06+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -235,10 +235,10 @@ msgid "15"
 msgstr "15"
 
 msgid "Orthography"
-msgstr "نظام الكتابة"
+msgstr "قواعد الكتابة"
 
 msgid "Grammatical style"
-msgstr "النحو"
+msgstr "الأساليب البلاغية"
 
 msgid "16"
 msgstr "16"
@@ -1391,6 +1391,9 @@ msgid ""
 "being formal or informal, for being technical or very accessible, and by "
 "respecting the rules of spelling and grammar to some degree."
 msgstr ""
+"لكل كتابة أسلوب يغلب عليها، وهذا ينطبق على اللغة المستخدمة في البرمجيات. قد "
+"تتميز بكونها رسمية أو غير رسمية، تقنية أو بسيطة، تلتزم بالقواعد اللغوية "
+"بدرجة أو بأخرى."
 
 msgid ""
 "When we translate, we will create a work with a certain style, and should "
@@ -1399,6 +1402,10 @@ msgid ""
 "from our language? There might be several such questions that could affect "
 "how we approach a translation. Think of your goals and your target audience."
 msgstr ""
+"وللترجمة أسلوبها أيضا، لذا علينا أن نحدد هدفنا من البداية؛ هل نريد الترجمة "
+"رسمية كالنص الأصلي؟ هل يمكن يُسمح باستخدام كلمات دخيلة أم يجب الاقتصار على "
+"الكلمات الشائعة في لغتنا؟ وغيرها من الأسئلة التي تشكل منهجنا في الترجمة. "
+"علينا أن نضع في الاعتبار الهدف من الترجمة والجمهور الذي نستهدفه."
 
 msgid ""
 "It is advisable to form some guidelines for software localisation in your "
@@ -1410,12 +1417,20 @@ msgid ""
 "want to discuss this with other translators and interested people and work "
 "on documenting your recommendations as these rules develop in your team."
 msgstr ""
+"من المستحسن وضع معايير لتوطين البرمجيات بلغتك، فعندما تتعدد الاحتمالات قد "
+"يختار المترجمون طرقا مختلفة لفعل نفس الشيء، وعدم الاتساق الناشئ عن هذا يقلل "
+"من جودة الترجمة. وبدون معايير محددة قد يواجه المترجمون الجدد في فريقك "
+"باختيارات صعبة تنفرهم وتقلل إنتاجيتهم. يناقش هذا القسم بعضا من جوانب الأسلوب "
+"التي قد تهمك. يستحسن مناقشة هذه الأمور مع باقي المترجمين والمهتمين بالأمر "
+"وتوثيق هذه المعايير بينما تُصقل مع الوقت."
 
 msgid ""
 "Also keep in mind that users will probably get used to the style used in "
 "software, as long as it is consistent and in line with your cultural "
 "conventions."
 msgstr ""
+"لاحظ أن المستخدمين سيعتادون على الأسلوب المستخدم ما دام متسقا مع بعضه ومع "
+"خلفيتهم الثقافية."
 
 msgid ""
 "Most languages have standardised some aspects of writing, such as the "
@@ -1425,6 +1440,10 @@ msgid ""
 "script), or might have newer versions of the same orthography – if spelling "
 "or other writing rules change.</f1>"
 msgstr ""
+"لأغلب اللغات قواعد موضوعة للأبجدية والإملاء وعلامات الترقيم وغيرها تسمى "
+"<f0>نظام الكتابة</f0>، وقد ترسم بعض اللغات بأكثر من طريقة (مثل الهوسا التي "
+"ترسم بالحرف العربي أو اللاتيني) أو قد تتغير قواعد نظام الكتابة ذاته بتغير "
+"الزمن لتغير قواعد الإملاء أو غيرها."
 
 msgid ""
 "You should be certain about the orthography you are following in your "
@@ -1436,6 +1455,12 @@ msgid ""
 "lot of freedom to decide how to do things. See your work as part of the task "
 "to standardise the writing in the language."
 msgstr ""
+"إذا كان للغتك أكثر من نظام للكتابة فعليك تحديد أيها ستستخدم، ويمكن الاستفادة "
+"من منشورات المجامع اللغوية وغيرها من المؤسسات التي تعنى بتأطير قواعد اللغة، "
+"أو حتى الكتب المدرسية الجيدة في حال لك تكن معرفتك بنظام الكتابة كافية. "
+"ستساعدك القواميس أيضا في ضبط قواعد الإملاء. إذا لم تكن للغتك قواعد متفق "
+"عليها فسيعطيك هذا حرية اختيار القواعد التي تلائمك، وعليك أن تعتبر عملك جزء "
+"من مجهود توحيد هذه القواعد. "
 
 msgid ""
 "There are some aspects of orthography that might be well standardised, but "
@@ -1444,6 +1469,9 @@ msgid ""
 "might be useful to write about any problematic issues in your team "
 "documentation."
 msgstr ""
+"قد تكون بعض قواعد الكتابة محددة جيدا لكنها تختلف عن القواعد المستخدمة في "
+"الإنجليزية، وأحيانا ما يغفل المترجمون الجدد في ترجماتهم عن القواعد التي "
+"تتبعها لغتك، لذا من المهم توثيق الأخطاء الشائعة ليُنتبه إليها."
 
 msgid ""
 "A common mistake when starting with localisation, is to ignore the "
@@ -1456,6 +1484,13 @@ msgid ""
 "and a complete lack of capitalisation might indicate that the translation is "
 "part of a bigger sentence."
 msgstr ""
+"من الأخطاء الشائعة (في اللغات التي تستخدم حروفا كبيرة وصغيرة) تجاهل نمط "
+"الحروف الكبيرة في النص الأصلي وإما استخدام الحروف الكبيرة في كل النص أو "
+"تركها على الإطلاق، وهو ما يعطي انطباعا سيئا عن جودة النص ويقلل من مقروئيته. "
+"طبعا إذا كانت لغتك لا تستخدم حروفا كبيرة فلا تعنيك هذه المشكلة، وحتى في هذه "
+"الحالة في الحروف الكبيرة في النص تساعدك على فهم المعنى؛ فأسماء الأعلام "
+"(أسماء الأشخاص أو المنتجات وغيرها) تكتب أوائلها بحروف كبيرة، والجملة التي لا "
+"تبدأ بحرف كبير قد تكون تكملة لجملة أخرى."
 
 msgid ""
 "Another common mistake, is to follow the English capitalisation too closely. "
@@ -1466,6 +1501,11 @@ msgid ""
 "your language's rules and customs with regards to capitalisation. In most "
 "cases, we will write brand <t0/>names and product names unchanged."
 msgstr ""
+"من الأخطاء الشائعة الأخرى اتباع نمط الحروف الكبيرة في الإنجليزية على إطلاقه، "
+"ففي الإنجليزية يشيع أسلوب يسمى أسلوب العناوين تبدأ فيه أغلب الكلمات بحروف "
+"كبيرة، لكن لا يشيع استعماله في لغات أخرى (مثل الألمانية واللغات التي تبع نفس "
+"نظام الكتابة)، ولذا عليك اتباع القواعد الصحيحة في لغتك. في أغلب الحالات "
+"ستنقل أسماء الأعلام كما هي دون تغيير."
 
 msgid "Examples"
 msgstr "أمثلة"
@@ -1476,6 +1516,9 @@ msgid ""
 "for capitalisation at the start of each message, but otherwise the title "
 "case is avoided for proper writing according to the rules of Northern Sotho."
 msgstr ""
+"هذه الأمثلة بلغة سوثو الشمالية التي لا تستخدم فيها الحروف الكبيرة إلا في أول "
+"الجمل وأسماء الأعلام، ولذا لا تتبع أسلوب العناوين في الأصل الإنجليزي "
+"لمخالفته لقواعد الكتابة المتبعة."
 
 msgid "English"
 msgstr "إنجليزي"
@@ -1570,6 +1613,13 @@ msgid ""
 "a placeable in the source text (see page <bf0>40</bf0> for working with "
 "placeables)."
 msgstr ""
+"استخدام علامات الترقيم والمسافات من الأمور المهمة التي تحتاج لتوثيقها في "
+"قواعد الترجمة. وحتى لو كان القواعد التي تستخدمها لغتك لا تختلف عن الإنجليزية "
+"فمن المهم أن ينتبه المترجمين إلى الجمل التي تنتهي بنقطتين (:) أو علامة "
+"استفهام (?) أو علامة تعجب (!) أو ثلاث نقاط (…). لاحظ أن الثلاثة نقاط قد تكتب "
+"ثلاثة نقاط متتابعة أو حرف واحد يمثلها جميعا وقد يصعب كتابته. يسهل فِرتال من "
+"إدراج الحروف الخاصة كهذه بتمييزها على أنها مُدرج (المُدرجات مفهوم خاص في "
+"فرتال، تعرف عليه أكثر في ص <bf0>40</bf0>)."
 
 msgid ""
 "If your language uses different punctuation from English, it might be good "
@@ -1579,6 +1629,11 @@ msgid ""
 "it blindly. For example, you might want to avoid the exclamation mark (!) if "
 "it is not so commonly used in your language."
 msgstr ""
+"أما إذا كانت لغتك تستخدم علامات ترقيم تختلف عن الإنجليزية فمن المهم تذكير "
+"المترجمين بالفرق وإعطاء بعض الأمثلة، مع توضيع علامات الترقيم المشتركة بين "
+"الاثنين. ومع أن علامات الترقيم في الأصل غالبا ما تكون مهمة، إلا أنك يجب ألا "
+"تتبعها دون تمييز، فمثلا يكثر استخدام علامات التعجب (!) في الإنجليزية، لكن "
+"إذا لم تكن شائعة في لغة بنفس القدر فيمكنك تجاهلها."
 
 msgid ""
 "Unusual spacing in the source text might be important, such as a space at "
@@ -1591,6 +1646,13 @@ msgid ""
 "as Pootle) will try to indicate any difference between the source text and "
 "your translation."
 msgstr ""
+"الاستخدام غير المعتاد للمسافات في النص الأصلي قد يكون عند قصد، مثل وضع "
+"مسافات في بداية الجملة أو في نهايتها. فقد يكون مستخدما لمحاذاة النص أو لفصل "
+"عناصر في واجهة البرنامج عن بعضها أو لوصل جملة مقسمة إلى عدة أجزاء. غالبا ما "
+"يعد هذا خطأ برمجيا، لكنك قد تصادفه في بعض الأحيان. أحيانا تستخدم مسافتين بين "
+"الجمل، لكن ليس من الضروري اتباع هذه القاعدة، وإن كان اتباعها قد يساعد على "
+"ضمان الاتساق. فحوص تدقيق الجودة الآلية في بعض البرمجيات (مثل بوتل) تحاول "
+"التنبيه إلى أي اختلافات من هذا النوع بين الأصل والترجمة."
 
 msgid ""
 "If your language uses a different alphabet from English, it might be "
@@ -1598,6 +1660,9 @@ msgid ""
 "that there is agreement on how transliteration is done in the team. "
 "Transliteration is discussed in more detail on page <bf0>23</bf0>."
 msgstr ""
+"إذا كانت لغتك تكتب بحروف غير اللاتينية فمن المهم وضع معايير لكتابة الأعلام "
+"الأجنبية ومتى تنقل صوتيا ومتى تكتب بحروفها الأصلية، والاتفاق على قواعد النقل "
+"الصوتي. يناقش هذا الأمر بتفصيل أكثر ص <bf0>23</bf0>."
 
 msgid ""
 "There are often more than one way to say the same thing. You can be formal, "
@@ -1605,15 +1670,18 @@ msgid ""
 "to use in your software translation could depend on several things. Ask "
 "yourself some of these questions:"
 msgstr ""
+"هناك دائما أكثر من طريقة لصوغ نفس المعنى، فيمكن تصاغ الجملة فتكون رسمية أو "
+"غير رسمية، مهذبة أو فظة، مقتضبة أو مسهبة إلخ. والصياغة الأمثل التي تناسب "
+"ترجمتك تعتمد على عدة عوامل. اسأل نفسك الأسئلة التالية:"
 
 msgid "How old are the users of the software?"
-msgstr ""
+msgstr "ما عمر مستخدمي البرنامج؟"
 
 msgid "In what kind of setting will they be using this? At home or at work?"
-msgstr ""
+msgstr "ما البيئة التي يستخدم فيها؛ في العمل أم في المنزل؟"
 
 msgid "Are there any wordings which might be offensive or impolite?"
-msgstr ""
+msgstr "هل بعض الصياغات مسيئة أو غير مهذبة؟"
 
 msgid ""
 "While we obviously want to write in the correct grammar, we additionally "
@@ -1624,16 +1692,21 @@ msgid ""
 "information in an impolite way might reduce the user’s spontaneity and leave "
 "a bad impression of the software."
 msgstr ""
+"فإلى جانب أننا نريد صياغة سليمة طبعا، نحتاج أيضا إلى أن نصوغها بطريقة تناسب "
+"البرنامج المستخدم ولا يشعر معها المستخدم بالإساءة. فلغة الأعمال والتجارة لا "
+"تناسب برنامجا للأطفال، واستخدام لغة غير رسمية قد لا يناسب برنامجا للمحاسبة، "
+"وسؤال المستخدم معلومات معينة بصورة غير مهذبة قد يعطي انطباعا سيئا عن "
+"البرنامج ويقلل تفاعله معه. "
 
 msgid ""
 "Some things you might want to describe in your team documentation include:"
-msgstr ""
+msgstr "بعض العناصر التي قد يفيد توثيقها في معايير الترجمة:"
 
 msgid ""
 "How formal should the software be? Should the user be addressed as an older "
 "or respected person? You might want to stay on the safe side to avoid giving "
 "offence."
-msgstr ""
+msgstr "ما مدى رسمية النص؟ هل يفترض استخدام ألقاب التوقير عند مخاطبة المستخدم؟"
 
 msgid ""
 "<f0>How should you translate questions? You will often encounter the word "
@@ -1645,6 +1718,12 @@ msgid ""
 "for confirmation. A bad translation for “</f4><f5>Are you sure … ?</f5><f6>” "
 "might sound as if the software doubts the user’s ability.</f6>"
 msgstr ""
+"كيف تترجم الأسئلة؟ في اللغة الإنجليزية يكثر استخدام عبارة “<f1>please</f1>”، "
+"فما الكلمة المناسبة في لغتك عندما تطلب شيئا؟ الترجمة الحرفية للفظة "
+"“<f3>please</f3>” قد تجعل البرنامج يظهر وكأنه يستجدي معروفا من المستخدم، "
+"بينما المقصود تشجيع المستخدم بتهذيب على فعل شيء ما. أحيانا يطلب البرنامج من "
+"المستخدم تأكيد شيء ما، لكن ترجمة العبارة “<f5>Are you sure … ?</f5> بطريقة "
+"سيئة قد تجعل البرنامج يظهر وكأنه يشكك في قدرة المستخدم على اتخاذ قرار."
 
 msgid ""
 "How should you translate commands? In English software, the text on buttons "
@@ -1655,6 +1734,10 @@ msgid ""
 "language clearly distinguishes causative verbs, you might want to ensure "
 "fine attention to such detail in these cases."
 msgstr ""
+"كيف تترجم الأوامر؟ في الإنجليزية غالبا ما تكون النصوص على الأزرار وفي "
+"القوائم أفعال أمر، لكن الكثير من اللغات لا تترجمها على أنها أوامر وتستخدم "
+"صيغة المصدر من هذه الأفعال. عليك أن تقرر أيها أنسب للغتك، وعليك التفكير أيضا "
+"في اللبس بين كون الأمر موجها للمستخدم أم للحاسوب."
 
 msgid ""
 "While your writing culture might encourage you to always take a more formal "
@@ -1663,6 +1746,9 @@ msgid ""
 "networking and instant messaging might feel more natural with a little more "
 "relaxed tone."
 msgstr ""
+"إذا كانت لغتك تميل إلى الأسلوب الرسمي في الكتابة، فربما يكون من الأفضل "
+"أحيانا تقليل النبرة الرسمية لتتماشى مع النص الأصلي، فالبرامج المستخدمة في "
+"الشبكات الاجتماعية والدردشة لا تناسبها الرسمية المفرطة."
 
 msgid ""
 "It is important to always try to convey the correct meaning as intended in "
@@ -1674,6 +1760,12 @@ msgid ""
 "text. The text might be used in unexpected ways, and a translation too far "
 "from the original meaning might be inappropriate for some situations."
 msgstr ""
+"من المهم جدا في الترجمة إيصال المعنى المراد في النص الأصلي. فأحيانا تجد أن "
+"بإمكانك صوغ الترجمة بطريقة أفضل، لكن عليك التأكد من أنك لا تغير المعنى "
+"المراد. راجع النقاط في قسم “مفاهيم أساسية” ص <bf1>21</bf1> ففيها أمثلة على "
+"هذا. فعلى سبيل المثال يجب ألا تكون الترجمة معممة أكثر أو مخصصة أكثر من النص "
+"الأصلي. كما أن النص قد يستخدم في سياق لا تتوقعه، فإذا اختلفت الترجمة كثيرا "
+"عن الأصل قد لا تلائم الاستخدامات التي لم تفكر فيها."
 
 msgid ""
 "<f0>Earlier we encouraged both </f0><f1>being careful</f1><f2> and "
@@ -1684,6 +1776,11 @@ msgid ""
 "other. We want to translate so that the result is both well written in the "
 "target language, and conveys the same message as the source text.</f4>"
 msgstr ""
+"شجعناك سابقا على أن تكون <f1>حريصا</f1> و <f3>جريئا</f3>، وقد يبدو هذا القسم "
+"أيضا متناقضا مع سابقه إذ يشجعك على عدم اتباع الأصل حرفيا بينما القسم السابق "
+"يشجعك على الالتزام بالأصل. لكن في الحقيقة كلا الهدفين مهمين ولا يتعارضان في "
+"العادة؛ فالمطلوب أن تكون الترجمة نصا سليما يتبع الأساليب اللغوية للغة "
+"المترجم إليها وفي نفس الوقت يوصل نفس المعنى المقصود في النص الأصلي."
 
 msgid ""
 "Your translation should always be true to the style of your language. Don’t "
@@ -1693,6 +1790,11 @@ msgid ""
 "taboo words or words with unintended meanings that might distract the user "
 "from the message."
 msgstr ""
+"يجب أن تلتزم الترجمة بالأساليب والتراكيب اللغوية الصحيحة في لغتك؛ فل تقع في "
+"خطأ اتباع نفس ترتيب الكلمات في الجملة الإنجليزية إذا لم يكن الأنسب في لغتك، "
+"ولا تترجم التعابير اللغوية حرفيا فبعض التعابير نتاج لثقافة معينة ليست موجودة "
+"في اللغة المتقول إليها. واحذر من الكلمات غير اللائقة في لغتك أو التي تحمل "
+"معاني غير مقصودة تبعد المستخدم عن الرسلة المطلوب إيصالها."
 
 msgid ""
 "The developer documentation of a project might discourage the use of the "
@@ -1700,6 +1802,10 @@ msgid ""
 "meant to apply to translations, feel free to ignore this advice if the "
 "passive voice is a good style to use in your language."
 msgstr ""
+"في بعض المشاريع تمنع وثائق المطورين استخدام المبني للمجهول، لكن عادة ما يكون "
+"النص الإنجليزي فقط هو المعني بهذا، لذا لا تترد في تجاهل مثل هذا التوجيه إذا "
+"كان المبني للمجهول هو الأنسب في لغتك، إلا إذا كانت تلك التوجيهات معنية "
+"بالترجمة أيضا."
 
 msgid "Terminology"
 msgstr ""
