--- a/manual.po
+++ b/manual.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-27 18:37+0200\n"
-"PO-Revision-Date: 2010-11-04 01:06+0300\n"
+"PO-Revision-Date: 2010-11-05 02:21+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -253,40 +253,40 @@ msgid "Be true to the target language"
 msgstr "ابتعد عن الترجمة الحرفية"
 
 msgid "Chapter 5: Terminology"
-msgstr ""
+msgstr "الفصل الخامس: مسرد المصطلحات"
 
 msgid "19"
-msgstr ""
+msgstr "19"
 
 msgid "Why develop terminology?"
-msgstr ""
+msgstr "ما أهمية وضع مسرد مصطلحات؟"
 
 msgid "Which terms should be developed?"
-msgstr ""
+msgstr "أي المصطلحات نهتم بها؟"
 
 msgid "20"
-msgstr ""
+msgstr "20"
 
 msgid "Available resources"
-msgstr ""
+msgstr "المصادر المتاحة"
 
 msgid "General principles"
-msgstr ""
+msgstr "قواعد أساسية"
 
 msgid "21"
-msgstr ""
+msgstr "21"
 
 msgid "Acronyms, abbreviations, brand names, product names"
-msgstr ""
+msgstr "الاختصارات والأسماء والعلامات التجارية"
 
 msgid "22"
-msgstr ""
+msgstr "22"
 
 msgid "Terminology assistance in translation tools"
-msgstr ""
+msgstr "الاستفادة من مسرد المصطلحات في أدوات الترجمة"
 
 msgid "23"
-msgstr ""
+msgstr "23"
 
 msgid "Chapter 6: Reuse"
 msgstr ""
@@ -1002,13 +1002,13 @@ msgid ""
 "as a group and working towards a common goal.</f1>"
 msgstr ""
 "حاول تدريب المستخدمين الجدد ليصبحوا مشاركين فعالين، وانشر الوعي بالتوطين. في "
-"مشروع Translate.org.za كثيرا ما ننظم فعاليا يجتمع فيها بعض الأشخاص ليوم أو "
-"يومين يترجمون إحدى البرمجيات، وهي طريقة فعالة لتعريف الناس بماهية توطين "
+"مشروع Translate.org.za كثيرا ما ننظم ماراثونات يجتمع فيها بعض الأشخاص ليوم "
+"أو يومين يترجمون إحدى البرمجيات، وهي طريقة فعالة لتعريف الناس بماهية توطين "
 "البرمجيات وتدريبهم على أساسياته وفي نفس الوقت تستمتع مجموعة من الناس بالعمل "
 "لتحقيق هدف مشترك."
 
 msgid "Read more about hosting a Translate@thon:"
-msgstr "تعرف أكثر على هذه الفاعليات:"
+msgstr "تعرف أكثر على هذه الماراثونات:"
 
 msgid "http://translate.sourceforge.net/wiki/guide/translateathon"
 msgstr "http://translate.sourceforge.net/wiki/guide/translateathon"
@@ -1762,7 +1762,7 @@ msgid ""
 msgstr ""
 "من المهم جدا في الترجمة إيصال المعنى المراد في النص الأصلي. فأحيانا تجد أن "
 "بإمكانك صوغ الترجمة بطريقة أفضل، لكن عليك التأكد من أنك لا تغير المعنى "
-"المراد. راجع النقاط في قسم “مفاهيم أساسية” ص <bf1>21</bf1> ففيها أمثلة على "
+"المراد. راجع النقاط في قسم “مبادئ أساسية” ص <bf1>21</bf1> ففيها أمثلة على "
 "هذا. فعلى سبيل المثال يجب ألا تكون الترجمة معممة أكثر أو مخصصة أكثر من النص "
 "الأصلي. كما أن النص قد يستخدم في سياق لا تتوقعه، فإذا اختلفت الترجمة كثيرا "
 "عن الأصل قد لا تلائم الاستخدامات التي لم تفكر فيها."
@@ -1808,7 +1808,7 @@ msgstr ""
 "بالترجمة أيضا."
 
 msgid "Terminology"
-msgstr ""
+msgstr "المصطلحات"
 
 msgid ""
 "Terms are words or short phrases with specific meaning. If we want to do "
@@ -1818,27 +1818,34 @@ msgid ""
 "them in dictionaries and translation tools in the same way. They also "
 "provide an opportunity to capture some aspects of style."
 msgstr ""
+"المصطلحات هي كلمات أو عبارات قصيرة لها معان محددة، وأي ترجمة جيدة تحتاج "
+"للاهتمام بالمصطلحات وترجماتها. ويمكن إلحاق العبارات القصيرة بالمصطلحات إذ "
+"كثيرا ما تكون لها معان محددة مثل المصطلحات ويمكن إضافتها للقواميس والتعامل "
+"معها في أدوات الترجمة بنفس الطريقة. كما يمكن استخدامها لتوضيح بعض جوانب "
+"الأسلوب المعتمد."
 
 msgid "file"
-msgstr ""
+msgstr "file"
 
 msgid "download"
-msgstr ""
+msgstr "download"
 
 msgid "network connection"
-msgstr ""
+msgstr "network connection"
 
 msgid "secure"
-msgstr ""
+msgstr "secure"
 
 msgid "Are you sure you want"
-msgstr ""
+msgstr "Are you sure you want"
 
 msgid ""
 "As you can see, a term can consist of one or several words. They can <s0/>be "
 "nouns, verbs, or any other type of word, or even a short phrase that we "
 "might find in translation work."
 msgstr ""
+"كما ترى قد يكون المصطلح من كلمة واحدة أو أكثر، كما يمكن أن يكون اسما أو فعلا "
+"أو حتى عبارة قصيرة تتكرر في الترجمة."
 
 msgid ""
 "Developing terminology is an important and ongoing task while translating "
@@ -1848,6 +1855,10 @@ msgid ""
 "software rather than being ashamed of bad quality. Bad translations can also "
 "damage the image of the software."
 msgstr ""
+"وضع مسرد للمصطلحات من المهام الأساسية والمستمرة أثناء الترجمة، فحسن اختيار "
+"المصطلحات والاتساق في استخدامها يساعد المستخدمين على التكيف مع البرمجيات "
+"المترجمة والفخر باستخدامها بدلا من الخجل منها ومن سوء مستواها. كما تحط "
+"الترجمة السيئة من قدر البرنامج في عين المستخدم."
 
 msgid ""
 "New terms are constantly used in software that will need to be translated. "
@@ -1857,6 +1868,11 @@ msgid ""
 "course help with the consistency. You don’t need a dictionary with thousands "
 "of terms before you can do useful localisation work."
 msgstr ""
+"تظهر دائما مصطلحات جديدة في عالم البرمجيات تحتاج صوغ مقابلات لها، ولهذا "
+"فمهمة وضع المصطلحات مستمرة استمرار ترجمة البرمجيات. ومع هذا فمجرد مسرد "
+"بترجمات المصطلحات الشائعة سيساعد كل أعضاء فريقة على الترجمة أسرع، وسيساعد "
+"على اتساق الترجمات مع بعضها، فلست بحاجة لقاموس يحتوي آلاف المصطلحات قبل "
+"البدء في الترجمة."
 
 msgid ""
 "Translation with lots of difficult terms can be frustrating for new "
@@ -1866,6 +1882,11 @@ msgid ""
 "they have some help from the start. A good terminology list is a big help in "
 "a Translat@thon for motivation and quality."
 msgstr ""
+"تثبط الترجمات التي تحتوي الكثيرة من المصطلحات الصعبة المترجمين الجدد وقد "
+"يقعوا في أخطاء كثيرة إذا لم تكن لهم خبرة بمصطلحات الحاسوب، لذا من المهم جدا "
+"وجود مسرد للمصطلحات لمساعدة أعضاء الفريق وخاصة الجدد منهم وتحفيزهم على "
+"المواصلة. كما يساعد المسرد الجيد كثيرا في جودة الترجمة وتحفيز المترجمين في "
+"ماراثونات الترجمة."
 
 msgid ""
 "Another reason why good terminology is important, is to ensure that it is "
@@ -1879,17 +1900,27 @@ msgid ""
 "translated in two different ways depending on the context, you want to "
 "capture that as part of your terminology development."
 msgstr ""
+"أحد فوائد وضع مسرد مصطلحات جيد أنه يضمن دقة ترجمة المصطلحات، فبعض المصطلحات "
+"صعبة وأحيانا تكون لها معان خاصة في سياق البرمجيات، وإذا أخطأ المترجم المعنى "
+"المقصود فستتدنى جودة الترجمة. ولهذا ستستفيد كثيرا من إفراد مساحة مستقلة في "
+"مشروعك للعمل على مسرد المصطلحات. مسرد المصطلحات الجيد يضمن أن تحمل الترجمة "
+"المعنى الصحيح وألا تربك المستخدم. وفي حال كان للمصطلح أكثر من ترجمة حسب "
+"السياق فمن المهم أن يشتمل مسرد المصطلحات على هذا."
 
 msgid ""
 "<f0>Short phrases might give the opportunity to unify some stylistic aspects "
 "of a translation, such as how requests to a user is made (as we see in the "
 "examples above, “</f0>Are you sure you want<f1>”).</f1>"
 msgstr ""
+"قد تكون العبارات القصيرة فرصة لتوحيد بعض جوانب الترجمة، مثل كيفية صوغ "
+"الأسئلة وغيرها من جمل الطلب (كما في الأمثلة أعلاه “Are you sure you want”)."
 
 msgid ""
 "Are you sure you want to download the file over the secure network "
 "connection?"
 msgstr ""
+"Are you sure you want to download the file over the secure network "
+"connection?"
 
 msgid ""
 "<f0>In this example sentence, there are some possibilities for making "
@@ -1899,16 +1930,22 @@ msgid ""
 "probably be translated in different ways, but inconsistent translations "
 "might give a bad impression of the software.</f1>"
 msgstr ""
+"في هذا المثال عدة مواضع تحتمل الخطأ، كألا يكون لكلمة “secure” ترجمة متفق "
+"عليها، أو لا تكون ترجمة “network connection” بديهية كفاية. تبدأ الجملة أيضا "
+"بالعبارة “Are you sure you want to ...” والتي يمكن ترجمتها بأكثر من طريقة، "
+"لكن عدم الاتفاق على ترجمة موحدة لها قد يعطي انطباعا سيئا عن البرنامج."
 
 msgid ""
 "Let’s indicate which terms might be recognised from our terminology list by "
 "underlining them:"
-msgstr ""
+msgstr "الكلمات الموضحة بسطر تحتها قد تصلح لإضافتها إلى مسرد المصطلحات:"
 
 msgid ""
 "<f0>Are you sure you want</f0><f1> to </f1><f2>download</f2> the "
 "<f3>file</f3> over the <f4>secure</f4> <f5>network connection</f5>?"
 msgstr ""
+"<f0>Are you sure you want</f0><f1> to </f1><f2>download</f2> the "
+"<f3>file</f3> over the <f4>secure</f4> <f5>network connection</f5>?"
 
 msgid ""
 "As you can see, it will be quick and easy to translate this with all of "
@@ -1919,6 +1956,11 @@ msgid ""
 "course this example is artificial, but you can expect real benefits from "
 "even a small list with a few hundred relevant terms."
 msgstr ""
+"وجود مسرد يترجم هذا المصطلحات يجعل من السهل ترجمة الجمة السابقة بسرعة، "
+"وستتسق الترجمة مع الترجمات المماثلة ومع أسلوب الترجمة المتفق عليه، كما ستزيد "
+"إنتاجية المترجم إن كان يستخدم أداة ترجمة تسهل إدراج ترجمة المصطلحات دون "
+"الحاجة لكتابتها يدويا. ومع أن هذا المثال مختلق، إلا أنه يوضح الفوائد التي قد "
+"تجنيها حتى من مسرد لا يحتوي إلا بضع مئات من المصطلحات الشائعة."
 
 msgid ""
 "If you are motivated to translate software, it might feel very demotivating "
