--- a/manual.po
+++ b/manual.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-27 18:37+0200\n"
-"PO-Revision-Date: 2010-11-05 02:21+0300\n"
+"PO-Revision-Date: 2010-11-07 00:14+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -1971,6 +1971,10 @@ msgid ""
 "your work to the most frequently used terms, especially at the start of your "
 "work."
 msgstr ""
+"قد يبدو أمر المصطلحات هذا مملا فأنت تريد ترجمة البرمجيات وليس تأليف قاموس، "
+"أليس كذلك؟ (طبعا تأليف قاموس أمر مفيد جدا في حد ذاته.) وضحنا في القسم السابق "
+"أهمية وفائدة مسرد المصطلحات، لكن عليك طبعا أن تعطي الأولوية للمصطلحات "
+"الشائعة خاصة في بداية عملك."
 
 msgid ""
 "You may only want to work on a smaller list of terms initially. Therefore it "
@@ -1987,6 +1991,16 @@ msgid ""
 "translate. Some of the suggested terms might not be important or meaningful "
 "to work on, but see the list of terms as a suggestion to save you time."
 msgstr ""
+"قد يكون من الأفضل البدء بقائمة صغيرة من المصطلحات، لذا من المهم أن تبدأ "
+"بالمصطلحات الأكثر شيوعا. قد تعرف بعض المصطلحات الشائعة تستحق وضعها في "
+"القائمة لكن محاولة بناء قائمة المصطلحات بنفسك مضيعة للوقت. من المهم أيضا أن "
+"تختار مصطلحات موجودة فعلا في الترجمات التي تعمل عليها بدلا من العمل على "
+"مصطلحات قد تكون مفيدة لكنك لا تحتاجها في الوقت الحالي. من الحلول المناسبة "
+"لهذه المهمة استخدام أداة استخراج مصطلحات مثل <f0>poterminology</f0> من عُدّة "
+"الترجمة (انظر ص <bf1>12</bf1>)، كما يحتوي بوتل على نفس الخاصية (انظر ص "
+"<bf2>42</bf2>). تعمل هذه الأدوات على تحليل النص لاستخراج قائمة المصطلحات "
+"المتكررة منه، قد لا تكون كل المصطلحات في القائمة الناتجة مهمة أو ذات معنى "
+"لكن يمكنك اعتبار هذه القائمة نقطة بداية توفر عليك الوقت."
 
 msgid ""
 "One disadvantage of a terminology extraction program, is that it probably "
@@ -1997,6 +2011,10 @@ msgid ""
 "the team in terms of productivity and motivation. Do what you think is most "
 "useful with the time you have available."
 msgstr ""
+"يعيب أدوات استخراج المصطلحات أنها في الأغلب لا تعرف أي المصطلحات يكثر "
+"استخدامها في أكثر أجزاء البرنامج ظهورا للمستخدم. فقد تحصل -مثلا- على مصطلحات "
+"تشيع في رسائل الأعطال، وهذه فائدتها قليلة إلا إذا كنت ستترجم رسائل الأعطال "
+"أيضا. عليك أم تختار ما هو أفضل استغلال للوقت المتاح أمامك."
 
 msgid ""
 "There might be many resources available to help you with your terminology "
@@ -2005,12 +2023,16 @@ msgid ""
 "existing sources of terminology, even if just for inspiration. Even looking "
 "at terms in languages related to yours could be helpful."
 msgstr ""
+"المصادر التي تساعدك في العمل على المصطلحات كثيرة، تذكر أنك عادة ما تريد "
+"استخدام المصطلحات المعروفة بدلا من وضع مصطلحات جديدة، لذا من الجيد مراجعة "
+"المصادر المتاحة حتى وإن يكن لمجرد استلهام الأفكار. أحيانا قد يفيدك الاطلاع "
+"على المصطلحات المستخدمة في اللغات القريبة من لغتك."
 
 msgid "Here are some places that might be useful:"
-msgstr ""
+msgstr "هذه بعض المصادر التي قد تفيدك:"
 
 msgid "Open-Tran.eu"
-msgstr ""
+msgstr "Open-Tran.eu"
 
 msgid ""
 "The website Open-Tran.eu collects many translations from FOSS projects, and "
@@ -2022,6 +2044,12 @@ msgid ""
 "from time to time, and if you are creating new translations, you will help "
 "to make this service more useful over time."
 msgstr ""
+"يجمع موقع Open-Tran.eu ترجمات مشاريع البرمجيات الحرة ويتيح البحث فيها. ورغم "
+"أنه لا يمكن اعتباره مرجعا لترجمة المصطلحات إلا أنه يعطيك صورة عامة عن ترجمات "
+"المصطلحات التي تستخدمها البرمجيات الحرة. إذا لم يحتو Open-Tran.eu على "
+"الكثير من الاقتراحات بلغتك فربما لقل الترجمات المتوفرة لها، الترجمات الجديدة "
+"من عدة مشاريع تضاف إلى الموقع مع الوقت وترجماتك نفسها تساعد في جعل هذه "
+"الخدمة مفيدة أكثر وأكثر."
 
 msgid ""
 "The results from Open-Tran.eu indicate from which project a suggestion "
@@ -2030,12 +2058,15 @@ msgid ""
 "is part of the GNOME project, you might want to pay particular attention to "
 "the suggestions coming from the GNOME project."
 msgstr ""
+"يعرض Open-Tran.eu بجانب كل اقتراح المشروع الذي جاء منه، وهذا يساعدك على "
+"توحيد مصطلحاتك مع المشاريع الشبيهة. فإذا كنت تترجم أحد مشاريع جنوم -مثلا- "
+"فسيفيدك الانتباه إلى الاقتراحات الآتية من مشاريع جنوم الأخرى."
 
 msgid "http://open-tran.eu/"
-msgstr ""
+msgstr "http://open-tran.eu/"
 
 msgid "Microsoft language portal"
-msgstr ""
+msgstr "بوابة ميكروسوفت للغات"
 
 msgid ""
 "The Microsoft language portal contains style guides, terminology lists, and "
@@ -2044,12 +2075,16 @@ msgid ""
 "aware of the terminology used in the Microsoft products. Users might be more "
 "used to them."
 msgstr ""
+"تحتوي بوابة ميكروسوفت للغات على أدلة الأساليب ومسارد المصطلحات والترجمات "
+"التي تستخدمها منتجات ميكروسوفت بعدد من اللغات، لذا قد يكون مفيدا جدا خاصة "
+"إذا كان البرنامج الذي تترجمه سيعمل على وندوز إذ قد يكون المستخدمون معتادين "
+"عليه أكثر."
 
 msgid "http://www.microsoft.com/language/"
-msgstr ""
+msgstr "http://www.microsoft.com/language/"
 
 msgid "Wikipedia"
-msgstr ""
+msgstr "ويكيبيديا"
 
 msgid ""
 "Wikipedia is an online encyclopaedia. Although it is not primarily intended "
@@ -2060,9 +2095,14 @@ msgid ""
 "which in turn will help to properly define and translate it into your "
 "language."
 msgstr ""
+"ويكيبيديا هي موسوعة على الإنترنت، وإن كانت لا تختص بترجمة المصطلحات إلى أنها "
+"تتناول طيفا واسعة من الموضوعات بالكثير من اللغات ولذا يمكن أن تبحث فيها عن "
+"مصطلح ما لترى كيف تُرجم في ويكيبيديا، كما قد تفيدك مقالات ويكيبيديا في فهم "
+"المفهوم الذي يعبر عنه المصطلح (حتى ولو لم تكن تلك المقالات مترجمة إلى لغتك) "
+"وهذا سيساعدك في صوغ الترجمة المناسبة للمصطلح."
 
 msgid "http://www.wikipedia.org/"
-msgstr ""
+msgstr "http://www.wikipedia.org/"
 
 msgid "Technical correctness"
 msgstr ""
